<resources>
    <string name="app_name">3 August - 9 August</string>

    <!-- first-activity -->
    <string name="num1">Number 1</string>
    <string name="num2">Number 2</string>
    <string name="ok">ok</string>

    <!-- second-activity -->
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multi">*</string>
    <string name="divide">/</string>
</resources>